fix: 🐛  fix marquee spacing

--- a/src/scss/framework/components/marquee/_c--marquee-b.scss
+++ b/src/scss/framework/components/marquee/_c--marquee-b.scss
@@ -1,7 +1,7 @@
 .c--marquee-b {
   @extend .f--background-d;
   @extend .f--pt-8;
-  @extend .f--pb-8;
+  @extend .f--pb-15;
   &__list-group {
     @extend .u--display-flex;
     @extend .u--align-items-center;
